structmeta-tests/tests/compile_fail/struct_meta/option_not_parse.rs
#[derive(structmeta::StructMeta)]
struct Example {
    not_parse: Option<NotParse>,
}
struct NotParse;

fn main() {}
